[package]
name = "systemd-parser"
version = "0.1.0"
authors = ["Justis <justis710@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pest = "2.0"
pest_derive = "2.0"

[lib]
name = "systemd_parser"
edition = "2018"

# [[bin]]
# name = "systemd-parser"
